--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -355,21 +355,35 @@ QtLogic.prototype = {
                 .on('mouseenter', 'canvas', function (evt) {
                     var widget = $(this).data('widget');
                     if (widget) {
+                        var eventData = parseMouseEvent(evt);
+
                         wsConnector.sendEvent({
                             command:"mouse",
                             type:"enter",
-                            id:widget.id
+                            id:widget.id,
+                            x:eventData.x,
+                            y:eventData.y
                         });
+
+                        widget.mousePositionX = eventData.x;
+                        widget.mousePositionY = eventData.y;
                     }
                 })
                 .on('mouseleave', 'canvas', function (evt) {
                     var widget = $(this).data('widget');
                     if (widget) {
+                        var eventData = parseMouseEvent(evt);
+
                         wsConnector.sendEvent({
                             command:"mouse",
                             type:"leave",
-                            id:widget.id
+                            id:widget.id,
+                            x:eventData.x,
+                            y:eventData.y
                         });
+
+                        widget.mousePositionX = undefined;
+                        widget.mousePositionY = undefined;
                     }
                 })
                 .on('mousedown', 'canvas', function(evt) {
@@ -409,6 +423,7 @@ QtLogic.prototype = {
                     var widget = $(this).data('widget');
                     if (widget) {
                         var eventData = parseMouseEvent(evt);
+
                         wsConnector.sendEvent({
                             command:"wheel",
                             type:"move",
@@ -426,6 +441,7 @@ QtLogic.prototype = {
                     var widget = $(this).data('widget');
                     if (widget) {
                         var eventData = parseMouseEvent(evt);
+
                         wsConnector.sendEvent({
                             command:"mouse",
                             type:"move",
@@ -433,8 +449,13 @@ QtLogic.prototype = {
                             btn: 0,
                             x: eventData.x,
                             y: eventData.y,
+                            ox: widget.mousePositionX,
+                            oy: widget.mousePositionY,
                             modifiers: eventData.modifiers
                         });
+
+                        widget.mousePositionX = eventData.x;
+                        widget.mousePositionY = eventData.y;
                     }
                 });
                 $(document).keydown(function(evt) {
