--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -4,7 +4,8 @@
     Websocket client test
 </title>
 <style type="text/css">
-    canvas {
+    .Dialog {
+        position: relative;
     }
 
     canvas {
@@ -18,6 +19,11 @@
     }
 </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://jqueryjs.googlecode.com/svn-history/r6063/trunk/plugins/simulate/jquery.simulate.js"></script>
+
+<script type="text/javascript" src="http://jedrychowski.org/jquery-ui/js/jquery-ui-1.8.23.custom.min.js"></script>
+<style type="text/css" src="http://jedrychowski.org/jquery-ui/css/ui-lightness/jquery-ui-1.8.23.custom.css"></style>
+
 <script type="text/javascript">
 var delayCallback = function (num, callback) {
     function finished() {
@@ -30,7 +36,17 @@ var delayCallback = function (num, callback) {
     return finished;
 };
 
-Array.prototype.pushFront = function(data) {
+function isEmpty(map) {
+    for(var key in map) {
+        if (map.hasOwnProperty(key)) {
+            return false;
+        }
+        return true;
+    }
+}
+
+
+    Array.prototype.pushFront = function(data) {
   this.reverse();
     this.push(data);
     this.reverse();
@@ -264,16 +280,25 @@ QtLogic.prototype = {
         }
     },
     addChildCommand:function (data) {
-        this.addWidgetChild(data.id, data.child);
+        this.addWidgetChild(data.id, data.child, data.flags);
     },
     removeChildCommand:function (data) {
         console.log(data);
     },
     showElement:function (data) {
-        this.widgets[data.id].canvas.show();
+        var canvas = this.widgets[data.id].canvas;
+        canvas.show();
+        if(canvas.hasClass("DialogCanvas")) {
+            canvas.parent().show();
+        }
     },
     hideElement:function (data) {
-        this.widgets[data.id].canvas.hide();
+        var canvas = this.widgets[data.id].canvas;
+        canvas.hide();
+        if(canvas.hasClass("DialogCanvas")) {
+            canvas.parent().hide();
+        }
+
     },
     resizeCommand:function (data) {
         var canvasElement = this.widgets[data.id].canvas;
@@ -299,7 +324,10 @@ QtLogic.prototype = {
         widget.canvas.css({left:translation.x, top:translation.y});
         var canvasDrawer = widget.canvasDrawer;
         canvasDrawer.ctx.save();
+
         canvasDrawer.setup(region, translation);
+        //canvasDrawer.setupBrush({style: 0}); // Clear brush
+        //canvasDrawer.setupPen('none'); // Clear brush
         $.each(renders, function (_, value) {
             canvasDrawer.draw(value, translation);
         });
@@ -335,11 +363,19 @@ QtLogic.prototype = {
                 left:data.x,
                 top:data.y
             });
+            if(canvasElement.hasClass("DialogCanvas")) {
+                canvasElement.css({left:0, top:0});
+                console.log(data);
+                canvasElement.parents(".Dialog")
+                        .css({left: data.x, top: data.y, width: data.w, height: data.h});
+                widget.x = 0;
+                widget.y = 0;
+            }
         } else {
             console.log(widget);
         }
     },
-    addWidgetChild:function (id, childId) {
+    addWidgetChild:function (id, childId, flags) {
         var widget = this.getWidget(id);
         var children = widget.children;
         var found = false;
@@ -350,7 +386,17 @@ QtLogic.prototype = {
             }
         });
         if (!found) {
-            children.push(this.getWidget(childId));
+            var newChildWidget = this.getWidget(childId);
+            if(flags & 3) {
+               var container = $('<div class="Dialog"></div>').appendTo($('#widgets'));
+                newChildWidget.canvas
+                        .addClass("DialogCanvas")
+                        .detach().appendTo(container);
+            } else {
+                console.log(widget.canvas);
+                newChildWidget.canvas.detach().insertAfter(widget.canvas);
+            }
+            children.push(newChildWidget);
             this.updateWidget(childId, {parent:this.getWidget(id)});
         }
     },
@@ -557,9 +603,12 @@ function parseMouseEvent(evt,widget) {
 
 function parseKeyEvent(evt) {
     var data = {};
+    if(evt.keyCode>= 65 && evt.keyCode <=90 ) {
+        data.key = evt.keyCode;
+        data.text = $.trim(String.fromCharCode(evt.which)).toLowerCase();
+    } else {
 
-    data.key = evt.keyCode;
-    data.text = $.trim(String.fromCharCode(evt.which)).toLowerCase();
+    }
 
     var modifiers = 0;
     if (evt.ctrlKey)
@@ -775,6 +824,9 @@ CanvasDrawer.prototype = {
         if (pen.dash && pen.dash.pattern.length != 0) {
             // TODO
         }
+        if(pen === "none" || isEmpty(pen)) {
+            ctx.strokeStyle = "rgba(0,0,0,0)";
+        }
         ctx.lineWidth = pen.width;
         ctx.lineJoin = pen.join;
         ctx.miterLimit = pen.miter;
@@ -847,5 +899,6 @@ $(document).ready(function () {
 <body>
 <div id="widgets"></div>
 <div class="data"></div>
+<input type="text" id="dupa"></input>
 </body>
 </html>
