--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -6,8 +6,64 @@
 <style type="text/css">
     .Dialog {
         position: relative;
+        background-color: gray;
     }
 
+    .Dialog .Bar {
+        position: absolute;
+        background-color: #a9a9a9;
+    }
+
+    .Dialog .ui-resizable-handle {
+        position: absolute;
+    }
+
+    .ui-resizable-n {
+        cursor: n-resize;
+    }
+.ui-resizable-s {
+        cursor: s-resize;
+    }
+.ui-resizable-w {
+        cursor: w-resize;
+    }
+.ui-resizable-e {
+        cursor: e-resize;
+    }
+.ui-resizable-nw {
+        cursor: nw-resize;
+    }
+.ui-resizable-ne {
+        cursor: ne-resize;
+    }
+.ui-resizable-sw {
+        cursor: sw-resize;
+    }
+.ui-resizable-se {
+        cursor: se-resize;
+    }
+
+.LT, .LB, .RT, .RB {
+    width: 9px;
+    height: 9px;
+}
+
+.LT {
+    left: 0;
+    top:0;
+}
+.LB {
+    left: 0;
+    bottom: 0;
+}
+    .RT {
+        right: 0;
+        top:0;
+    }
+    .RB {
+        right: 0;
+        bottom: 0;
+    }
     canvas {
         position: absolute;
         left: 0;
@@ -212,7 +268,6 @@ WSConnector.prototype = {
     },
     helloMessage:function () {
         this.websocket.send(sessionID);
-        console.log('sent');
     },
     sendEvent:function (event) {
         this.websocket.send(JSON.stringify(event));
@@ -350,6 +405,9 @@ QtLogic.prototype = {
         return this.widgets[id];
     },
     updateWidget:function (id, data) {
+        var WINDOW_LT = {x: 5, y: 20};
+        var WINDOW_RB= {x: 5, y: 5 }
+
         var widget = this.getWidget(id);
         $.extend(widget, data);
         var canvasElement = widget.canvas;
@@ -363,16 +421,52 @@ QtLogic.prototype = {
                 left:data.x,
                 top:data.y
             });
-            if(canvasElement.hasClass("DialogCanvas")) {
-                canvasElement.css({left:0, top:0});
-                console.log(data);
-                canvasElement.parents(".Dialog")
-                        .css({left: data.x, top: data.y, width: data.w, height: data.h});
-                widget.x = 0;
-                widget.y = 0;
+            if(canvasElement.hasClass("DialogCanvas") ) {
+                //canvasElement.css({left:0, top:0});
+                widget.x = WINDOW_LT.x;
+                widget.y = WINDOW_LT.y;
+            }
+            if(canvasElement.hasClass("DialogCanvas") && data.x && data.y && data.w && data.h && ! canvasElement.hasClass("Set")) {
+                canvasElement
+                        .css({left:0, top:0})
+                        .addClass("Set");
+                var parents_dialog = canvasElement.parents(".Dialog");
+                parents_dialog
+                        .css({left: data.x, top: data.y, width: data.w + WINDOW_LT.x + WINDOW_RB.x, height: data.h + WINDOW_LT.y + WINDOW_RB.y})
+                        .draggable({
+                            handle: '.Bar'
+                        })
+                        .resizable({
+                            handles: {
+                                w: '.Left',
+                                e: '.Right',
+                                s: '.Bottom',
+                                nw: '.LT',
+                                ne: '.RT',
+                                sw: '.LB',
+                                se: '.RB'
+                            },
+                            stop: function(e, ui) {
+                                var new_width =  ui.size.width - WINDOW_LT.x - WINDOW_RB.x,
+                                        new_height = ui.size.height - WINDOW_LT.y - WINDOW_RB.y;
+                                console.log(data);
+                                 console.log('New size: ' + new_width + 'x' + new_height);
+                                 return false;
+                            },
+                            ghost: true
+                        });
+                parents_dialog.find(".Bar")
+                        .css({width: data.w + WINDOW_LT.x + WINDOW_RB.x, height: WINDOW_LT.y});
+                parents_dialog.find(".Left")
+                        .css({width: WINDOW_LT.x, height: data.h, left: 0, top: WINDOW_LT.y});
+                parents_dialog.find(".Right")
+                        .css({width: WINDOW_RB.x, height: data.h, right: 0, top: WINDOW_LT.y});
+                parents_dialog.find(".Bottom")
+                        .css({width: data.w, height: WINDOW_RB.y, left: WINDOW_LT.x, bottom: 0});
+                widget.x = WINDOW_LT.x;
+                widget.y = WINDOW_LT.y;
             }
         } else {
-            console.log(widget);
         }
     },
     addWidgetChild:function (id, childId, flags) {
@@ -388,12 +482,12 @@ QtLogic.prototype = {
         if (!found) {
             var newChildWidget = this.getWidget(childId);
             if(flags & 3) {
-               var container = $('<div class="Dialog"></div>').appendTo($('#widgets'));
+               var container = $('<div class="Dialog"><div class="Bar"></div><div class="Left ui-resizable-handle ui-resizable-w"></div><div class="Bottom ui-resizable-handle ui-resizable-s"></div><div class="Right ui-resizable-handle ui-resizable-e"></div><div class="LT ui-resizable-handle ui-resizable-nw"></div><div class="LB ui-resizable-handle ui-resizable-sw"></div><div class="RT ui-resizable-handle ui-resizable-ne"></div><div class="RB ui-resizable-handle ui-resizable-se"></div></div>')
+                       .appendTo($('#widgets'));
                 newChildWidget.canvas
                         .addClass("DialogCanvas")
                         .detach().appendTo(container);
             } else {
-                console.log(widget.canvas);
                 newChildWidget.canvas.detach().insertAfter(widget.canvas);
             }
             children.push(newChildWidget);
