--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -422,17 +422,16 @@ QtLogic.prototype = {
                 top:data.y
             });
             if(canvasElement.hasClass("DialogCanvas") ) {
-                //canvasElement.css({left:0, top:0});
                 widget.x = WINDOW_LT.x;
                 widget.y = WINDOW_LT.y;
             }
-            if(canvasElement.hasClass("DialogCanvas") && data.x && data.y && data.w && data.h && ! canvasElement.hasClass("Set")) {
+            if(canvasElement.hasClass("DialogCanvas") && data.x && data.y && data.w && data.h) {
                 canvasElement
                         .css({left:0, top:0})
                         .addClass("Set");
                 var parents_dialog = canvasElement.parents(".Dialog");
                 parents_dialog
-                        .css({left: data.x, top: data.y, width: data.w + WINDOW_LT.x + WINDOW_RB.x, height: data.h + WINDOW_LT.y + WINDOW_RB.y})
+                        .css({ width: data.w + WINDOW_LT.x + WINDOW_RB.x, height: data.h + WINDOW_LT.y + WINDOW_RB.y})
                         .draggable({
                             handle: '.Bar'
                         })
@@ -455,14 +454,17 @@ QtLogic.prototype = {
                             },
                             ghost: true
                         });
+            if(!canvasElement.hasClass("Set")) {
+                parents_dialog.css({left: data.x, top: data.y});
+            }
                 parents_dialog.find(".Bar")
-                        .css({width: data.w + WINDOW_LT.x + WINDOW_RB.x, height: WINDOW_LT.y});
+                        .css({width: '100%', height: WINDOW_LT.y});
                 parents_dialog.find(".Left")
-                        .css({width: WINDOW_LT.x, height: data.h, left: 0, top: WINDOW_LT.y});
+                        .css({width: WINDOW_LT.x, height: '100%'});
                 parents_dialog.find(".Right")
-                        .css({width: WINDOW_RB.x, height: data.h, right: 0, top: WINDOW_LT.y});
+                        .css({width: WINDOW_RB.x, height: '100%', right: 0});
                 parents_dialog.find(".Bottom")
-                        .css({width: data.w, height: WINDOW_RB.y, left: WINDOW_LT.x, bottom: 0});
+                        .css({width: '100%', height: WINDOW_RB.y, bottom: 0});
                 widget.x = WINDOW_LT.x;
                 widget.y = WINDOW_LT.y;
             }
@@ -481,12 +483,17 @@ QtLogic.prototype = {
         });
         if (!found) {
             var newChildWidget = this.getWidget(childId);
-            if(flags & 3) {
+            if((flags & 3) === 3) {
+                console.log(flags);
+                console.log(newChildWidget.canvas);
                var container = $('<div class="Dialog"><div class="Bar"></div><div class="Left ui-resizable-handle ui-resizable-w"></div><div class="Bottom ui-resizable-handle ui-resizable-s"></div><div class="Right ui-resizable-handle ui-resizable-e"></div><div class="LT ui-resizable-handle ui-resizable-nw"></div><div class="LB ui-resizable-handle ui-resizable-sw"></div><div class="RT ui-resizable-handle ui-resizable-ne"></div><div class="RB ui-resizable-handle ui-resizable-se"></div></div>')
                        .appendTo($('#widgets'));
+                container.attr('data-flags',flags);
                 newChildWidget.canvas
                         .addClass("DialogCanvas")
                         .detach().appendTo(container);
+            } else if(flags & 8) {
+                // Popup
             } else {
                 newChildWidget.canvas.detach().insertAfter(widget.canvas);
             }
